--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,9 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.0</version>
+        <!--        <version>3.1.0</version>-->
+        <version>3.0.5
+        </version> <!-- downgrade della versione di Spring per funzionare correttamente i moduli security -->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.lessons</groupId>
@@ -52,6 +54,17 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- moduli security per implementare autenticazione e autorizzazione -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Bootstrap -->
         <dependency>
             <groupId>org.webjars</groupId>
