--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <!--        <version>3.1.0</version>-->
-        <version>3.0.5
-        </version> <!-- downgrade della versione di Spring per funzionare correttamente i moduli security -->
+        <!-- downgrade della versione di Spring per far funzionare correttamente i moduli security -->
+        <version>3.0.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.lessons</groupId>
