Create error page 403 and change pages view to according user role

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- modulo security thymeleaf extras -->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+        </dependency>
 
         <!-- Bootstrap -->
         <dependency>
